--- a/index.html
+++ b/index.html
@@ -1,15 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
 
-    <link rel="stylesheet" href="dist/output.css">
-</head>
-<body>
-    
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+            rel="stylesheet"
+        />
 
-    <script src="src/js/app.js"></script>
-</body>
+        <link rel="stylesheet" href="dist/output.css" />
+    </head>
+    <body class="bg-sky-950 text-center">
+        <h1
+            class="my-12 font-[Press Start 2P] text-amber-100 text-4xl border text-center"
+        >
+            Press A Key to Start
+        </h1>
+
+        <div class="w-6/12 m-auto ">
+            <div class="h-96 flex flex-col items-center justify-around">
+                <div
+                    type="button"
+                    id="green"
+                    class="btn bg-green-800 size-40 rounded-3xl border-8 border-black"
+                ></div>
+
+                <div
+                    type="button"
+                    id="red"
+                    class="btn red bg-red-600 size-40 rounded-3xl border-8 border-black"
+                ></div>
+            </div>
+
+            <div class="h-96 flex flex-col items-center justify-around ">
+                <div
+                    type="button"
+                    id="yellow"
+                    class="btn bg-yellow-400 size-40 rounded-3xl border-8 border-black"
+                ></div>
+                <div
+                    type="button"
+                    id="blue"
+                    class="btn bg-blue-700 size-40 rounded-3xl border-8 border-black"
+                ></div>
+            </div>
+        </div>
+
+        <script src="src/js/app.js"></script>
+    </body>
 </html>
