add responsive design

--- a/index.html
+++ b/index.html
@@ -16,36 +16,40 @@
     </head>
     <body class="bg-sky-950 text-center">
         <h1
-            class="my-12 font-[Press Start 2P] text-amber-100 text-4xl border text-center"
+            class="mt-4 font-press text-amber-100 text-xl text-center sm:text-3xl md:text-5xl lg:text-7xl xl:my-32"
         >
-            Press A Key to Start
+            Press the 'A' Key to Start
         </h1>
 
-        <div class="w-6/12 m-auto ">
-            <div class="h-96 flex flex-col items-center justify-around">
+        <div class="w-6/12 m-auto sm:w-11/12">
+            <div
+                class="h-80 mx-auto flex flex-col items-center justify-around sm:h-[350px] sm:w-[500px] sm:flex-row lg:w-[600px]"
+            >
                 <div
                     type="button"
                     id="green"
-                    class="btn bg-green-800 size-40 rounded-3xl border-8 border-black"
+                    class="btn bg-green-800 size-36 rounded-3xl border-8 border-black sm:size-56 lg:size-64"
                 ></div>
 
                 <div
                     type="button"
                     id="red"
-                    class="btn red bg-red-600 size-40 rounded-3xl border-8 border-black"
+                    class="btn red bg-red-600 size-36 rounded-3xl border-8 border-black sm:size-56 lg:size-64"
                 ></div>
             </div>
 
-            <div class="h-96 flex flex-col items-center justify-around ">
+            <div
+                class="h-80 mx-auto flex flex-col items-center justify-around sm:h-[350px] sm:w-[500px] sm:flex-row lg:w-[600px]"
+            >
                 <div
                     type="button"
                     id="yellow"
-                    class="btn bg-yellow-400 size-40 rounded-3xl border-8 border-black"
+                    class="btn bg-yellow-400 size-36 rounded-3xl border-8 border-black sm:size-56 lg:size-64"
                 ></div>
                 <div
                     type="button"
                     id="blue"
-                    class="btn bg-blue-700 size-40 rounded-3xl border-8 border-black"
+                    class="btn bg-blue-700 size-36 rounded-3xl border-8 border-black sm:size-56 lg:size-64"
                 ></div>
             </div>
         </div>
