--- a/index.html
+++ b/index.html
@@ -23,33 +23,33 @@
 
         <div class="w-6/12 m-auto sm:w-11/12">
             <div
-                class="h-80 mx-auto flex flex-col items-center justify-around sm:h-[350px] sm:w-[500px] sm:flex-row lg:w-[600px]"
+                class="h-80 mx-auto flex flex-col items-center justify-around sm:h-[350px] sm:w-[500px] sm:flex-row lg:w-[700px]"
             >
                 <div
                     type="button"
                     id="green"
-                    class="btn bg-green-800 size-36 rounded-3xl border-8 border-black sm:size-56 lg:size-64"
+                    class="btn bg-green-800 size-36 rounded-[20%] border-8 border-black sm:size-56 sm:border-[15px] lg:size-72"
                 ></div>
 
                 <div
                     type="button"
                     id="red"
-                    class="btn red bg-red-600 size-36 rounded-3xl border-8 border-black sm:size-56 lg:size-64"
+                    class="btn red bg-red-600 size-36 rounded-[20%] border-8 border-black sm:size-56 sm:border-[15px] lg:size-72"
                 ></div>
             </div>
 
             <div
-                class="h-80 mx-auto flex flex-col items-center justify-around sm:h-[350px] sm:w-[500px] sm:flex-row lg:w-[600px]"
+                class="h-80 mx-auto flex flex-col items-center justify-around sm:h-[350px] sm:w-[500px] sm:flex-row lg:w-[700px]"
             >
                 <div
                     type="button"
                     id="yellow"
-                    class="btn bg-yellow-400 size-36 rounded-3xl border-8 border-black sm:size-56 lg:size-64"
+                    class="btn bg-yellow-400 size-36 rounded-[20%] border-8 border-black sm:size-56 sm:border-[15px] lg:size-72"
                 ></div>
                 <div
                     type="button"
                     id="blue"
-                    class="btn bg-blue-700 size-36 rounded-3xl border-8 border-black sm:size-56 lg:size-64"
+                    class="btn bg-blue-700 size-36 rounded-[20%] border-8 border-black sm:size-56 sm:border-[15px] lg:size-72"
                 ></div>
             </div>
         </div>
