swap long utilitiy classes for a btn class on all buttons

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 <div
                     type="button"
                     id="green"
-                    class="bg-green-800 size-36 rounded-[20%] border-8 border-black sm:size-56 sm:border-[15px] lg:size-72 active:bg-zinc-500 active:shadow-white active:shadow"
-                ></div>
+                    class="bg-green-800 btn"
+                ></div> 
 
                 <div
                     type="button"
                     id="red"
-                    class="bg-red-600 size-36 rounded-[20%] border-8 border-black sm:size-56 sm:border-[15px] lg:size-72 active:bg-zinc-500 active:shadow-white active:shadow"
+                    class="bg-red-600 btn"
                 ></div>
             </div>
 
@@ -44,12 +44,12 @@
                 <div
                     type="button"
                     id="yellow"
-                    class="bg-yellow-400 size-36 rounded-[20%] border-8 border-black sm:size-56 sm:border-[15px] lg:size-72 active:bg-zinc-500 active:shadow-white active:shadow"
+                    class="bg-yellow-400 btn"
                 ></div>
                 <div
                     type="button"
                     id="blue"
-                    class="bg-blue-700 size-36 rounded-[20%] border-8 border-black sm:size-56 sm:border-[15px] lg:size-72 active:bg-zinc-500 active:shadow-white active:shadow"
+                    class="bg-blue-700 btn"
                 ></div>
             </div>
         </div>
