change buttons spacing for medium screens

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     </head>
     <body class="bg-sky-950 text-center">
         <h1
-            class="mt-4 font-press text-amber-100 text-xl text-center sm:text-3xl md:text-5xl lg:text-7xl xl:my-32"
+            class="mt-4 font-press text-amber-100 text-xl text-center sm:text-3xl md:text-5xl lg:text-7xl xl:mt-28 xl:mb-20"
         >
             Press the 'A' Key to Start
         </h1>
 
         <div class="w-6/12 m-auto sm:w-11/12">
             <div
-                class="h-80 mx-auto flex flex-col items-center justify-around sm:h-[350px] sm:w-[500px] sm:flex-row lg:w-[700px]"
+                class="h-80 mx-auto flex flex-col items-center justify-around sm:h-[250px] sm:w-[500px] sm:flex-row lg:w-[700px] lg:h-[350px]"
             >
                 <div
                     type="button"
@@ -41,7 +41,7 @@
             </div>
 
             <div
-                class="h-80 mx-auto flex flex-col items-center justify-around sm:h-[350px] sm:w-[500px] sm:flex-row lg:w-[700px]"
+                class="h-80 mx-auto flex flex-col items-center justify-around sm:h-[250px] sm:w-[500px] sm:flex-row lg:w-[700px] lg:h-[350px]"
             >
                 <div
                     type="button"
