--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
             rel="stylesheet"
         />
 
-        <link rel="shortcut icon" href="src/assets/favicon/game.png" type="image/x-icon">
+        <link
+            rel="shortcut icon"
+            href="src/assets/favicon/game.png"
+            type="image/x-icon"
+        />
 
         <link rel="stylesheet" href="dist/output.css" />
     </head>
@@ -20,39 +24,23 @@
         <h1
             class="mt-4 font-press text-amber-100 text-xl text-center sm:text-3xl md:text-5xl lg:text-7xl xl:mt-28 xl:mb-20"
         >
-            Press the 'A' Key to Start
+            Press the <span id="a">'A'</span> Key to Start
         </h1>
 
         <div class="w-6/12 m-auto sm:w-11/12">
             <div
                 class="h-80 mx-auto flex flex-col items-center justify-around sm:h-[250px] sm:w-[500px] sm:flex-row lg:w-[700px] lg:h-[350px]"
             >
-                <div
-                    type="button"
-                    id="green"
-                    class="bg-green-800 btn"
-                ></div> 
+                <div type="button" id="green" class="bg-green-800 btn"></div>
 
-                <div
-                    type="button"
-                    id="red"
-                    class="bg-red-600 btn"
-                ></div>
+                <div type="button" id="red" class="bg-red-600 btn"></div>
             </div>
 
             <div
                 class="h-80 mx-auto flex flex-col items-center justify-around sm:h-[250px] sm:w-[500px] sm:flex-row lg:w-[700px] lg:h-[350px]"
             >
-                <div
-                    type="button"
-                    id="yellow"
-                    class="bg-yellow-400 btn"
-                ></div>
-                <div
-                    type="button"
-                    id="blue"
-                    class="bg-blue-700 btn"
-                ></div>
+                <div type="button" id="yellow" class="bg-yellow-400 btn"></div>
+                <div type="button" id="blue" class="bg-blue-700 btn"></div>
             </div>
         </div>
 
